added 6.3 completion and adjusted lab layout

--- a/Labs/1/results/6/3/docker-compose.yml
+++ b/Labs/1/results/6/3/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
     oracle-server:
         build: ./encryption_oracle
@@ -7,7 +5,9 @@ services:
         container_name: oracle-10.9.0.80
         tty: true
         cap_add:
-                - ALL
+            - ALL
+        ports:
+            - "3000:3000"
         networks:
             net-10.9.0.0:
                 ipv4_address: 10.9.0.80
@@ -17,4 +17,4 @@ networks:
         name: net-10.9.0.0
         ipam:
             config:
-                - subnet: 10.9.0.0/24
+                - subnet: 10.9.0.0/24 
